--- a/org_new/src/main/res/values/arrays.xml
+++ b/org_new/src/main/res/values/arrays.xml
@@ -63,8 +63,8 @@
         <item>26. Чи Ваш фізичний стан або лікування заважали Вашому родинному життю?</item>
         <item>27. Чи Ваш фізичний стан або лікування заважали Вашому спілкуванню з людьми?</item>
         <item>28. Чи Ваш фізичний стан або лікування спричинили фінансові труднощі?</item>
-        <item>29. Як би Ви оцінили свій загальний стан здоров’я протягом минулого тижня?</item>
-        <item>30. Як би Ви в цілому оцінили якість свого життя протягом минулого тижня?</item>
+        <item>29. Як би Ви оцінили свій загальний стан здоров’я протягом минулого тижня? (Від 1 до 7: 1 - дуже погано, 7 - чудово)</item>
+        <item>30. Як би Ви в цілому оцінили якість свого життя протягом минулого тижня? (Від 1 до 7: 1 - дуже погано, 7 - чудово)</item>
     </string-array>
 
     <string-array name="qs_s">
