--- a/org_new/src/main/res/layout/pruzn_likarja.xml
+++ b/org_new/src/main/res/layout/pruzn_likarja.xml
@@ -18,7 +18,8 @@
         android:shadowColor="#C71585"
         android:shadowDx="1"
         android:shadowDy="1"
-        android:shadowRadius="1"        
+        android:shadowRadius="1"
+
         android:textSize="30sp"/>
 
     <LinearLayout
@@ -46,14 +47,15 @@
         <Button
             android:id="@+id/new_diag"
             style="@style/RMZ_Button"
-            android:layout_width="110dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:drawableLeft="@drawable/adding12"
             android:gravity="center_horizontal|center_vertical"
             android:onClick="onClick"
-            android:paddingLeft="10dp"
             android:text="Додати"
+            android:padding="20dp"
+            android:textStyle="bold"
             android:visibility="visible" />
     </LinearLayout>
 
