--- a/org_new/src/main/res/layout/diagnoz_show_layout.xml
+++ b/org_new/src/main/res/layout/diagnoz_show_layout.xml
@@ -2,7 +2,9 @@
     <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
 
     <LinearLayout
         android:orientation="vertical"
