--- a/org_new/src/main/res/layout/edit_doct.xml
+++ b/org_new/src/main/res/layout/edit_doct.xml
@@ -1,6 +1,257 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@drawable/doctor_center"
+    android:padding="20dp">
+
+    <EditText
+        android:id="@+id/editQuest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:enabled="true"
+        android:inputType="textMultiLine"
+        android:minLines="4"
+        android:scrollbars="vertical"
+        android:textSize="25sp"
+        android:hint="Прізвище, імя, по батькові"
+        android:gravity="top|left">
+
+        <requestFocus />
+    </EditText>
+
+    <EditText
+        android:id="@+id/EditSpec"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:enabled="true"
+        android:inputType="textMultiLine"
+        android:minLines="2"
+        android:scrollbars="vertical"
+        android:hint="Спеціальність" />
+
+    <EditText
+        android:id="@+id/EditEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:enabled="true"
+        android:inputType="textMultiLine"
+        android:minLines="2"
+        android:scrollbars="vertical"
+        android:hint="Електронна адреса" />
+
+    <EditText
+        android:id="@+id/EditAbout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:enabled="true"
+        android:inputType="textMultiLine"
+        android:minLines="4"
+        android:scrollbars="vertical"
+        android:hint="Про лікаря" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <EditText
+            android:id="@+id/EditTel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:enabled="true"
+            android:inputType="textMultiLine"
+            android:minLines="1"
+            android:scrollbars="vertical"
+            android:hint="Телефон" >
+        </EditText>
+
+        <ImageButton
+            android:id="@+id/Phone"
+            style="@style/RMZ_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:onClick="onClick"
+            android:padding="5dp"
+            android:src="@drawable/btn_call_contact" />
+
+        <Button
+            android:id="@+id/Phone12"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="Виклик"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1" >
+
+        <Button
+            android:id="@+id/saveAnswDoctor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="Зберегти"
+            android:padding="20dp"
+            android:textStyle="bold"
+            style="@style/RMZ_Button"/>
+
+        <Button
+            android:id="@+id/clearAnswerEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="Очистити"
+            android:padding="20dp"
+            android:textStyle="bold"
+            style="@style/RMZ_Button"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1"
+        android:visibility="gone">
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            style="@style/RMZ_Button"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:textSize="20sp"
+            android:src="@drawable/new_play_type" />
+
+        <ImageButton
+            android:id="@+id/imageButton1"
+            style="@style/RMZ_Button"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize = "20sp"
+            android:padding="10dp"
+            android:src="@drawable/new_rec_type3" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_weight="1"
+        android:visibility="gone">
+
+        <ImageButton
+            android:id="@+id/imageButton4"
+            style="@style/RMZ_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/btn_cam_type" />
+
+        <ImageButton
+            android:id="@+id/imageButton5"
+            style="@style/RMZ_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/btn_browse_type" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:visibility="gone" >
+
+        <Button
+            android:id="@+id/listenAudio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="Прослухати запис" />
+
+        <Button
+            android:id="@+id/makeAudio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="Записати аудіо" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:visibility="gone" >
+
+        <Button
+            android:id="@+id/showFoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.00"
+            android:onClick="onClick"
+            android:text="Переглянути фото" />
+
+        <Button
+            android:id="@+id/makeFoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="Зфотографувати" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:visibility="gone" >
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Видалити все" />
+
+        <Button
+            android:id="@+id/clear_answer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="Очистити відповідь" />
+    </LinearLayout>
+
+</LinearLayout>
+<!--
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
@@ -82,15 +333,20 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:onClick="onClick"
-        android:text="Зберегти тексти" />
-    
+        android:text="Зберегти"
+        android:padding="20dp"
+        android:textStyle="bold"
+        style="@style/RMZ_Button"/>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="1" >
+        android:layout_weight="1"
+        android:visibility="gone" >
 
         <Button
             android:id="@+id/listenAudio"
@@ -136,7 +392,8 @@
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_weight="1" >
+        android:layout_weight="1"
+        android:visibility="gone" >
 
         <Button
             android:id="@+id/showFoto"
@@ -198,3 +455,4 @@
     </LinearLayout>
 
 </LinearLayout>
+-->
