--- a/org_new/src/main/res/layout/vidchuttja.xml
+++ b/org_new/src/main/res/layout/vidchuttja.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
-            android:onClick="showResult"
+            android:onClick="showList"
             android:id="@+id/btnShowListVidchuttja"
             android:text="@string/show_history_button"
             style="@style/RMZ_Button"
