--- a/org_new/src/main/res/layout/activity_reference.xml
+++ b/org_new/src/main/res/layout/activity_reference.xml
@@ -25,7 +25,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_marginBottom="220dp"
+        android:layout_marginBottom="25dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="25dp"
@@ -36,7 +36,7 @@
             android:id="@+id/btn_clinics"
             style="@style/RMZ_Button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="onClick"
             android:shadowColor="#C71585"
@@ -50,7 +50,7 @@
             android:id="@+id/btn_words"
             style="@style/RMZ_Button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="onClick"
             android:shadowColor="#C71585"
