--- a/org_new/src/main/res/layout/new_vidch.xml
+++ b/org_new/src/main/res/layout/new_vidch.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical" >
 
     <LinearLayout
-        android:id="@+id/LinearLayout1"
+        android:id="@+id/LinearLayoutOld"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#fff"
